Worked on the tables

--- a/src/content/mainmatter/beispielaufgaben/vorlesung3Loesungen.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung3Loesungen.tex
@@ -33,7 +33,8 @@ Bei scharfem Hinschauen sieht man, dass die ersten 2 Bytes in allen Routing-Eint
     \item Die ersten 4 Einträge passen alle nicht → R5 wird genommen
     \item Die ersten 4 Einträge passen alle nicht → R5 wird genommen
     \item Der 4. Eintrag passt → R4 wird genommen
-    \item Der 1. und der 4. Eintrag passen. Weil der Netzanteil des ersten Eintrags länger ist, wird dieser verwendet!
+    \item Der 1. und der 4. Eintrag passen.
+    Weil der Netzanteil des ersten Eintrags länger ist, wird dieser verwendet!
 \end{enumerate}
 
 \minisec{\textbf{Übungsaufgabe 2:}}
@@ -71,7 +72,9 @@ Dazu kann der spezialisiertere Eintrag gelöscht werden, also:
 \end{center}
 
 Zusatzfrage:
-Eintrag 2 spezialisiert Eintrag 1 und leitet nach R2, wobei allerdings die weitere Spezialisierung im 3. Eintrag wieder nach R1 leitet. Diese Situation könnte man auch lösen, in dem man beim 2. Eintrag einen Präfix von 12 verwendet, und dadurch den 3. Eintrag überflüssig macht, weil nun Regel 1 die IPs, die vorher von Regel 3 erfasst wurden, auch nach R1 routet, also:
+Eintrag 2 spezialisiert Eintrag 1 und leitet nach R2, wobei allerdings die weitere Spezialisierung im 3. Eintrag wieder nach R1 leitet.
+Diese Situation könnte man auch lösen, in dem man beim 2. Eintrag einen Präfix von 12 verwendet,
+und dadurch den 3. Eintrag überflüssig macht, weil nun Regel 1 die IPs, die vorher von Regel 3 erfasst wurden, auch nach R1 routet, also:
 
 \begin{center}
     \begin{tabular}{|c|c|}
