--- a/src/content/mainmatter/beispielaufgaben/vorlesung6Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung6Aufgaben.tex
@@ -23,7 +23,8 @@
 \end{equation}
 
 \minisec{Übungsaufgabe 1:}
-Wir streben eine Kommunikation mit einer Mondstation an und möchten eine TCP-Anwendung unterstützen, die eine Datenrate von 100Mbit/s erzielen soll. Die Round-Trip-Zeit sei 2,4 Sekunden.
+Wir streben eine Kommunikation mit einer Mondstation an und möchten eine TCP-Anwendung unterstützen, die eine Datenrate von 100Mbit/s erzielen soll.
+Die Round-Trip-Zeit sei 2,4 Sekunden.
 
 Wir groß (in Bytes) sollte das Übertragungsfenster (Sliding Window) mindestens sein, um diese Rate überhaupt erzielen zu können?
 Welche Rate könnte maximal erreicht werden, wenn die Größe des Übertragungsfensters 64KByte wäre (65536 Byte)?
