--- a/src/content/mainmatter/beispielaufgaben/vorlesung7Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung7Aufgaben.tex
@@ -18,6 +18,9 @@ Beim TCP Verbindungsaufbau wird der 3-way-handshake benutzt.
 Woher kennt TCP die Größe der übermittelten Nutzdaten (bzw. wie 'lang' ein übertragenes Segment ist) ?
 
 \minisec{Übungsaufgabe 4:}
-Sie möchten mit der West-Küste der USA eine TCP-basierte Kommunikation durchführen. Damit Ihre Anwendung vernünftig funktioniert benötigen Sie eine Bandbreite von mindestens $40 \frac{Mbit}{s}$. Die Round-Trip-Zeit sei 100ms.
+Sie möchten mit der West-Küste der USA eine TCP-basierte Kommunikation durchführen.
+Damit Ihre Anwendung vernünftig funktioniert benötigen Sie eine Bandbreite von mindestens 40 $\frac{Mbit}{s}$.
+Die Round-Trip-Zeit sei 100ms.
 
-Was benötigen Sie im TCP-Protokoll um dieses Ziel zu erreichen? Wie genau würde dies ablaufen?
+Was benötigen Sie im TCP-Protokoll, um dieses Ziel zu erreichen?
+Wie genau würde dies ablaufen?
