--- a/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
@@ -13,10 +13,11 @@
     \end{itemize}
     \item MAC Sublayer:
     \begin{itemize}
-        \item Das \textbf{Kanalzugriffsprotokoll} beschreibt, nach welchen Regeln auf ein Übertragungsmedium zugegriffen werden darf, d. h. ein Rahmen auf der Verbindungsleitung übertragen werden darf
+        \item Das \textbf{Kanalzugriffsprotokoll} beschreibt, nach welchen Regeln auf ein Übertragungsmedium zugegriffen werden darf,
+        d. h. ein Rahmen auf der Verbindungsleitung übertragen werden darf
         \item Bei \underline{Punkt-zu-Punkt}-Verbindungen ist das Leitungszugriffsprotokoll einfach.
         \item Der Sender kann einen Rahmen senden, wann immer die Verbindungsleitung frei ist (bei vollduplex immer)
-        \item Bei \underline{Multi-Access-Netzen} teilen sich mehrere Teilnehmer eine Verbindungsleitung, z.B. nach dem Bus-Prinzip.
+        \item Bei \underline{Multi-Access-Netzen} teilen sich mehrere Teilnehmer eine Verbindungsleitung, z. B. nach dem Bus-Prinzip.
         \item Hier übernimmt der MAC Layer die Koordination der Leitungsnutzung
         \item Der MAC-Layer liefert eine eindeutige Kennung für jedes Netzwerkgerät bzw. jede Netzwerk-Karte → \textcolor{blue}{MAC} Adresse
     \end{itemize}
