--- a/src/content/mainmatter/vorlesungsfragen/vorlesung3.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung3.tex
@@ -117,11 +117,11 @@ IP-Adressklassen:
 \end{itemize}
 \begin{center}
     \begin{tabular}{c l c}
-        Ziel      & 11.1.2.5    & = 00001011.0000001.00000010.00000101                     \\
+        Ziel & 11.1.2.5 & = 00001011.0000001.00000010.00000101 \tabularnewline
         \hline
-        Route \#1 & 11.1.2.0/24 & = \textcolor{green}{00001011.0000001.00000010}.00000000  \\
-        Route \#2 & 11.1.0.0/16 & = \textcolor{orange}{00001011.0000001}.00000000.00000000 \\
-        Route \#3 & 11.0.0.0/8  & = \textcolor{orange}{00001011}.0000000.00000000.00000000 \\
+        Route \#1 & 11.1.2.0/24 & = \textcolor{green}{00001011.0000001.00000010}.00000000 \tabularnewline
+        Route \#2 & 11.1.0.0/16 & = \textcolor{orange}{00001011.0000001}.00000000.00000000 \tabularnewline
+        Route \#3 & 11.0.0.0/8  & = \textcolor{orange}{00001011}.0000000.00000000.00000000 \tabularnewline
     \end{tabular}
 \end{center}
 Es wird der Weg ermittelt, welcher am genausten spezifiziert wird (most specific)
