--- a/src/content/mainmatter/vorlesungsfragen/vorlesung5.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung5.tex
@@ -26,8 +26,10 @@
 \begin{itemize}
     \item Probleme von RARP
     \begin{itemize}
-        \item Ethernet-Broadcasts sind auf Subnetze beschränkt. In einem LAN mit Subnetze braucht man mehrere RARP-Server
-        \item Durch RARP erfährt ein Rechner nur seine IP-Adresse! Zu einer vollständigen Konfiguration einer Netzwerkschnittstelle gehören noch mindestens Netzmaske und Default-Gateway.
+        \item Ethernet-Broadcasts sind auf Subnetze beschränkt.
+        In einem LAN mit Subnetze braucht man mehrere RARP-Server
+        \item Durch RARP erfährt ein Rechner nur seine IP-Adresse!
+        Zu einer vollständigen Konfiguration einer Netzwerkschnittstelle gehören noch mindestens Netzmaske und Default-Gateway.
         \item DHCP hat RARP heute komplett abgelöst!
     \end{itemize}
     \item \textcolor{blue}{DHCP} (\textcolor{blue}{D}ynamic \textcolor{blue}{H}ost \textcolor{blue}{C}onfiguration \textcolor{blue}{P}rotokoll)
@@ -69,7 +71,7 @@
     \begin{itemize}
         \item Mitteilung von Problemen beim Paketversand
         \item Echo-Anfragen (existiert der Zielknoten?)
-        \item Unterstützung von höheren Protokollen und Anwendungen (z.B. Path MTU discovery, traceroute, \ldots)
+        \item Unterstützung von höheren Protokollen und Anwendungen (z. B. Path MTU discovery, traceroute, \ldots)
     \end{itemize}
 \end{itemize}
 
