--- a/src/content/mainmatter/beispielaufgaben/vorlesung6Loesungen.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung6Loesungen.tex
@@ -8,6 +8,6 @@ Die minimale Fenstergröße ergibt sich aus dem Bandwidth-Delay-Produkt:
     W \geq 100 \frac{Mbit}{s} * 2,4s = 240 Mbit = 30MByte\\
 \end{gather*}
 Antwort: Die minimale Fenstergröße auf Sender- und Empfängerseite müsste mindestens 30MB betragen.
-Bei $W = 65536 Byte$ gilt:
+Bei W $=$ 65536 Byte gilt:
 \[B \leq \frac{W}{RTT} = \frac{65536 * 8 Bit}{2,4s} = 218,45 \frac{kbit}{s}\]
 Antwort: Bei einer Fenstergröße von 65536 Byte wäre die maximale Übertragungsrate $218,45 \frac{kbit}{s}$
